Fix room card content alignment

--- a/indico/modules/rb_new/client/js/components/Room.module.scss
+++ b/indico/modules/rb_new/client/js/components/Room.module.scss
@@ -64,6 +64,10 @@
         }
     }
 
+    :global(.content) {
+        max-height: 105px;
+    }
+
     .room-content {
         .room-details {
             float: right;
